# mass-spectrometry-benchmarks

./: .gitignore  .pre-commit-config.yaml  README.md  prek.toml
.github/workflows/: audit.yml  ci.yml
spectral-cosine-similarity/: Cargo.toml  README.md  pyproject.toml
spectral-cosine-similarity/fixtures/: .gitignore  CCMSLIB00000081223.json  CCMSLIB00000081243.json  CCMSLIB00000224048.json  CCMSLIB00004722106.json  CCMSLIB00005435898.json  schema.sql
spectral-cosine-similarity/output/: tables.md
spectral-cosine-similarity/scripts/: matchms_compute.py  python_load_massspecgym.py  python_reference_compute.py
spectral-cosine-similarity/scripts/python_ref/: __init__.py  algorithms.py  db_io.py  runner.py  types.py  workload.py
spectral-cosine-similarity/scripts/python_ref/algorithms/: __init__.py  cosine_greedy.py  cosine_hungarian.py  entropy_unweighted.py  entropy_weighted.py  modified_cosine.py  ms_entropy_api.py
spectral-cosine-similarity/src/: benchmark_topology.rs  compute.rs  db.rs  download.rs  fingerprint.rs  lib.rs  main.rs  mgf_parser.rs  models.rs  ntfy.rs  pair_selection.rs  peaks.rs  prepare.rs  progress.rs  report.rs  schema.rs
spectral-cosine-similarity/src/report/: aggregate.rs  compare.rs  data.rs  markdown.rs  mod.rs  render.rs  style.rs  types.rs
spectral-cosine-similarity/tests/: compute_resume.rs  pipeline_fast.rs  prepare_small_dataset.rs
spectral-cosine-similarity/tests/common/: mod.rs
