[package]
name = "spectral-cosine-similarity"
version = "0.1.0"
edition = "2024"

[features]
default = []
python-tests = []

[dependencies]
mass_spectrometry = { git = "https://github.com/earth-metabolome-initiative/mass-spectrometry-traits" }
diesel = { version = "2", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
indicatif = "0.17"
clap = { version = "4", features = ["derive"] }
plotters = { version = "0.3", default-features = false, features = ["svg_backend", "line_series"] }
sha2 = "0.10"
md-5 = "0.10"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
